deployments/deployment_files/datanodes.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: datanode
spec:
  persistentVolumeClaimRetentionPolicy:
    whenDeleted: Delete
  serviceName: "datanode-headless" # Headless service name
  replicas: 3
  selector:
    matchLabels:
      app: datanode
  template:
    metadata:
      labels:
        app: datanode
    spec:
      containers:
        - name: datanode
          image: bde2020/hadoop-datanode:2.0.0-hadoop3.2.1-java8
          ports:
            - containerPort: 9864  # RPC port
            - containerPort: 9866  # Data transfer port
          volumeMounts:
            - name: hadoop-datanode-storage
              mountPath: /hadoop/dfs/data
  volumeClaimTemplates:
    - metadata:
        name: hadoop-datanode-storage
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 1Gi

---
apiVersion: v1
kind: Service
metadata:
  name: datanode-headless
spec:
  selector:
    app: datanode
  clusterIP: None  # Makes the service headless
  ports:
    - name: rpc
      protocol: TCP
      port: 9864
      targetPort: 9864
    - name: data-transfer
      protocol: TCP
      port: 9866
      targetPort: 9866
