deployments/deployment_files/webapp.yaml
apiVersion: v1
kind: Service
metadata:
  name: nodeapp-service
spec:
  selector:
    app: webapp
  type: LoadBalancer
  ports:
  - protocol: TCP
    port: 5000
    targetPort: 1337
    nodePort: 31110
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webapp-deployment
  labels:
    app: webapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webapp
  template:
    metadata:
      labels:
        app: webapp
    spec:
      containers:
      - name: nodeserver
        image: magnusquist/webapp:latest
        ports:
        - containerPort: 1337
