deployments/deployment_files/allow-all-traffic.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-all-traffic
  namespace: group-07
spec:
  podSelector: {}
  ingress:
  - {}
  egress:
  - {}
